syntax = "proto3";

package taoniu.local.account.grpc.mqtt.publishers;
option go_package = "taoniu.local/account/grpc/mqtt/publishers";

service Publishers {
  rpc Token (TokenRequest) returns (TokenReply) {}
}

message TokenRequest {
  string id = 1;
}

message TokenReply {
  string accessToken = 1;
}
